# This Makefile is used to build and execute the tests when "make check"
# is run.

AM_CXXFLAGS = -I../include/
LDADD = ../src/libcds.la

check_PROGRAMS = testHuffman testSequence testQuantile testBitSequence testArray testTextIndex testLCP testNPR toArray2 toArray testSuffixTree timeSequence

testHuffman_SOURCES = testHuffman.cpp
testSequence_SOURCES = testSequence.cpp
testQuantile_SOURCES = testQuantile.cpp
testBitSequence_SOURCES = testBitSequence.cpp
testArray_SOURCES = testArray.cpp
testTextIndex_SOURCES = testTextIndex.cpp
testLCP_SOURCES = testLCP.cpp
testNPR_SOURCES = testNPR.cpp
toArray2_SOURCES = toArray2.cpp
toArray_SOURCES = toArray.cpp
testSuffixTree_SOURCES = testSuffixTree.cpp
timeSequence_SOURCES = timeSequence.cpp
