# This Makefile is used to build and execute the tests when "make check"
# is run.

AM_CXXFLAGS = -I../include/
LDADD = ../src/libcds.la

check_PROGRAMS = testHuffman testSequence testQuantile testBitSequence testArray toArray2 toArray timeSequence

testHuffman_SOURCES = testHuffman.cpp
testSequence_SOURCES = testSequence.cpp
testQuantile_SOURCES = testQuantile.cpp
testBitSequence_SOURCES = testBitSequence.cpp
testArray_SOURCES = testArray.cpp
toArray2_SOURCES = toArray2.cpp
toArray_SOURCES = toArray.cpp
timeSequence_SOURCES = timeSequence.cpp
