# Build the tutorial programs.

AM_CXXFLAGS = -I../../include/
LDADD = ../../src/libcds.la
noinst_PROGRAMS = ArrayExample2 ArrayExample BitSequenceRGExample BitSequenceRRRExample BitSequenceSDArrayExample SequenceAlphPartExample SequenceGMRExample SequenceWaveletTreeExample

ArrayExample2_SOURCES = ArrayExample2.cpp
ArrayExample_SOURCES = ArrayExample.cpp
BitSequenceRGExample_SOURCES = BitSequenceRGExample.cpp
BitSequenceRRRExample_SOURCES = BitSequenceRRRExample.cpp
BitSequenceSDArrayExample_SOURCES = BitSequenceSDArrayExample.cpp
SequenceAlphPartExample_SOURCES = SequenceAlphPartExample.cpp
SequenceGMRExample_SOURCES = SequenceGMRExample.cpp
SequenceWaveletTreeExample_SOURCES = SequenceWaveletTreeExample.cpp
